--- a/ui-config.yml
+++ b/ui-config.yml
@@ -3,11 +3,17 @@ antora:
   name: modules
   dir: www
   modules:
+    - name: index
+      label: "Introduction"
+      solveButton: false
     - name: module-01
-      label: "Your first Network Ansible Playbook"
+      label: "Using Ansible documentation"
       solveButton: false
     - name: module-02
-      label: "Validate idempotency"
+      label: "Ansible Facts Playbook"
+      solveButton: true
+    - name: module-02
+      label: "Using the Debug Module"
       solveButton: false
 
 tabs:
