--- a/ui-config.yml
+++ b/ui-config.yml
@@ -17,7 +17,7 @@ antora:
       solveButton: false
 
 tabs:
-  - name: "VS Code"
+  - name: "code-server"
     url: https://vscode-${guid}.${domain}/?folder=/home/rhel
     external: false
   - name: "TERMINAL"
